<resources>

    <string name="app_name" translatable="false">Craft Rom - Manager</string>

    <!-- Drawer menu -->
    <string name="menu_news">News</string>
    <string name="menu_kernel" translatable="false">Chidori Kernel</string>
    <string name="menu_head_tools">Tools</string>
    <string name="menu_safety" translatable="false">SafetyNet Attestation</string>
    <string name="menu_laboratory">Laboratory</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <!-- Common -->
    <string name="common_empty_result" translatable="false">-</string>

    <!-- Splash -->
    <!-- Debugging code is like hunting. Bug hunting. -->
    <string name="text_slogan_0">RUSSIAN WARSHIP, GO F*CK YOURSELF!</string>
    <string name="text_slogan_1">RUSSIAN WARSHIP … DONE!</string>
    <string name="text_slogan_2">GLORY TO UKRAINE! GLORY TO THE HEROES!</string>
    <string name="text_slogan_3">VOVA, BEAT\'EM F*CKING BRAINS OUT!</string>

    <string name="copyr" translatable="false">© 2020-%s All Right Reserved.</string>
    <string name="app_name_version">%s version: %s </string>

    <!-- Into -->
    <string name="contribute_title">INFORMATION THAT WE CAN SHARE</string>
    <string name="onboarding_finished_button">Start app</string>
    <string name="contribute_more_info">Privacy Policy</string>
    <string name="contribute_explanation">Your privacy is important to Craft Rom. Our Privacy Policy explains how we collect, use, disclose, transfer, and store your information. Please take a moment to familiarize yourself with our privacy practices.\nCraft Rom provides an after-market operating system and applications for various mobile devices.\n\nINFORMATION WE HAVE\nWe do not collect any additional information about our visitors, other than that provided by Google Analytics.\n\nWEB\nWe may collect information regarding user activities on our website. This information is aggregated and used to help us provide more useful information to our users to understand which parts of our website, products, and services are of most interest, and for general system diagnostics. Aggregated data is considered non-personal information for the purposes of this Privacy Policy.\n\nINFORMATION THAT WE CAN SHARE\nWe do not share your information with companies, organizations or individuals outside of Craft Rom unless one of the following circumstances applies:\n\n• With your consent (Submission of bug reports to our bug tracking platform is considered consent.)\n• When legally required.</string>
    <string name="intro_title">Welcome to the Craft Rom!</string>
    <string name="intro">All information and files — both in source and compiled form — are provided on an as is basis.</string>
    <string name="legal_text">The user assumes all risks of any damages that may occur, including but not limited to loss of data, damages to hardware, or loss of business profits.</string>

    <!-- News -->
    <string name="welcome">The task always takes longer than expected to complete, even if you have considered Hofstader\'s Law.</string>
    <string name="title_txt" translatable="false">Title</string>
    <string name="publication_date_txt" translatable="false">Publication Date</string>
    <string name="publication_author_txt" translatable="false">Publication Author</string>
    <string name="view_but">View</string>
    <string name="network_unavailable">Failed to connect to the internet!</string>
    <string name="err_no_internet">Looks like your device isn\'t connected to the internet.\nCheck Internet connection and try again</string>
    <string name="err_card_no_internet">No internet connection</string>
    <string name="err_card_try_again">Try Again</string>

    <!-- Kernel -->
    <string name="kernel_name" translatable="false">@string/menu_kernel</string>
    <string name="kernel_welcome">Balanced kernel for everyday.</string>
    <string name="rom_type">Rom type</string>
    <string name="kernel_version">Kernel version</string>
    <string name="chidori_version">Chidori version</string>
    <string name="device_group">Device group</string>
    <string name="type_group">Update channel</string>
    <string name="board_version">Board</string>
    <string name="changelog">Changelog</string>
    <string name="kernel_version_author" translatable="false">%1$s • v%2$s, Linux %3$s</string>
    <string name="snack_kernel_name_error">This kernel is not supported!</string>
    <string name="snack_kernel_name">This kernel is %s! Version kernel is %s!</string>
    <string name="info_type_nightly">Compiled using the latest code base, includes latest enhancements but may also include undiscovered bugs.</string>
    <string name="info_type_release">When we that the current codebase is stable, a stable version will be published</string>

    <!-- Jitter -->
    <string name="jitter" translatable="false">Jitter</string>
    <string name="jitter_name">Identifying Jitter</string>
    <string name="jitter_welcome">Jitter is the random system behavior that prevents perceptible work from running.</string>
    <string name="totalish_mma">"CPU-total duration: %.3fms"</string>
    <string name="ui_frametime_mma">"UI duration: %.3fms"</string>
    <string name="rt_frametime_mma">"RT duration: %.3fms"</string>
    <string name="total_mma">"Total duration: %.3fms"</string>

    <!-- SafetyNET. -->
    <string name="safety_name" translatable="false">SafetyNet Attestation</string>
    <string name="safety_welcome">SafetyNet api is a part of Google Play Services Framework. Some apps use this api to check whether the device has been rooted or tampered.</string>
    <string name="cts" translatable="false">CTS profile match</string>
    <string name="basic_integrity" translatable="false">Basic integrity</string>
    <string name="eva_type" translatable="false">Evaluation type</string>
    <string name="time" translatable="false">Timestamp</string>
    <string name="digest" translatable="false">Apk digest</string>
    <string name="device">Device</string>
    <string name="model">Model</string>
    <string name="android_version">Android version</string>
    <string name="security_patch">Security patch level</string>
    <string name="advice_bootloader">The user should lock their device\'s bootloader.</string>
    <string name="advice_factory_rom">The user should restore their device to a clean factory ROM.</string>
    <string name="please_wait">Please wait…</string>
    <string name="apk_name">Package name</string>
    <string name="btn_verify">Run SafetyNet Attestation</string>

    <!-- Settings -->
    <string name="settings_general">General</string>
    <string name="settings_update_options">Update Options</string>
    <string translatable="false" name="settings_root_options_title">Root</string>

    <string name="settings_news_title">The number of news in the feed</string>
    <string name="settings_news_list_3">3 news</string>
    <string name="settings_news_list_5">5 news</string>
    <string name="settings_news_list_10">10 news</string>
    <string translatable="false" name="settings_list_news_key">numbNews</string>

    <string name="settings_type_title">Update channel</string>
    <string name="settings_type_nightly">Nightly</string>
    <string name="settings_type_stable">Release</string>
    <string translatable="false" name="settings_type_key">typeUpdate</string>

    <string translatable="false" name="settings_kernelupdate_key">ChidoriUpdate</string>
    <string name="settings_kernelupdate_title">Check kernel update</string>

    <string translatable="false" name="settings_apkupdate_key">APKUpdate</string>
    <string name="settings_apkupdate_title">Check app update</string>

    <string translatable="false" name="settings_update_hour_key">updateHour</string>
    <string name="settings_update_hour_title">Update Hour</string>

    <string translatable="false" name="settings_check_for_updates_key">checkForUpdatesNew</string>
    <string name="settings_check_for_updates_title">Background check for updates</string>
    <string name="settings_check_for_updates_daily">Daily</string>
    <string name="settings_check_for_updates_weekly">Weekly</string>
    <string name="settings_check_for_updates_monthly">Monthly</string>
    <string name="settings_check_for_updates_never">Never</string>

    <string translatable="false" name="settings_root_profile_key">rootProfile</string>
    <string name="settings_root_profile_title">ROOT mode</string>

    <!-- Laboratory -->
    <string name="laboratory_welcome">Debug and experimental functions.</string>

    <string name="fps_head">Resource monitoring overlay</string>
    <string name="fps_desc">Show on going FPS/CPU/GPU count in a overlay</string>
    <string name="fps_notif_desc">Monitoring service started…</string>
    <string name="pref_pm">Missing permissions</string>
    <string name="pref_pm_desc">CraftRom Manager App needs permissions to download and install updates.\nTap here to grant Storage and Root permissions.</string>
    <string name="err_no_pm_root">You didn\'t granted root permission.\nGrant root permission using Magisk Manager</string>
    <string name="help_android11_pm">Tap \"CraftRom Manager\", then tap \"Allow access to manage all files\"</string>

    <!-- About -->
    <string name="love"><![CDATA[</> with ❤️ by melles1991]]></string>
    <string name="about_as">About Us</string>
    <string name="about_as_desc">Craft Rom is a community that maintains devices in various open source Android projects (MoKee OS, Lineage OS, crDroid, and others) and Chidori Kernel.\n\nOur main priority is stability (unfortunately, it is not always possible to achieve the full extent).</string>
    <string name="features">App Features</string>
    <string name="features_deck" translatable="false">• Craft Rom site news\n• Jitter\n• SafetyNet Attestation verifies\n• Resource monitoring overlay\n• Others</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_subtitle">Anything that can go wrong has already gone wrong.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--  Prefs -->
    <string translatable="false" name="prefs_ignored_apps">ignoredApps</string>
    <string translatable="false" name="prefs_updates">updates</string>

    <!--  Notifications -->
    <string name="notification_channel_name">Updates</string>
    <string name="notification_channel_description">Channel for update notifications.</string>
    <string translatable="false" name="notification_channel_id">updateChannel</string>
    <string name="notification_update_title">Updates</string>
    <string translatable="false" name="notification_update_action">updates</string>
    <string name="notification_update_description">Found new app version.</string>

    <!-- Self Update -->
    <string name="selfupdate_found_title">Update found!</string>

    <!-- Update dialog -->
    <string name="inst_warn">A new version of the app has been found!</string>
    <string name="inst_install">Download and install</string>
    <string name="inst_download">Download</string>


    <string name="todo" translatable="false">TODO</string>
</resources>