<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addMaterialContainer"
    android:layout_gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryVariant"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/ThemeTitleHideable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="?attr/colorPrimaryVariant"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                style="@style/ThemeText"
                android:id="@+id/br"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="?attr/colorPrimaryVariant"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/errorInternet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingTop="0dp"
                android:paddingBottom="2dp">

                <ImageView
                    android:id="@+id/errorIcon"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_round_public_off_24"
                    app:tint="@color/google_gray" />

                <TextView
                    style="@style/ThemeTitleHideable"
                    android:id="@+id/errorTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/err_card_no_internet"
                    android:textAlignment="center" />

                <TextView
                    style="@style/ThemeTextGray"
                    android:id="@+id/errorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/err_no_internet"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btnRefresh"
                    style="@style/ThemeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/err_card_try_again"
                    app:icon="@drawable/ic_round_refresh_24" />

            </LinearLayout>
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/item_news_layout" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>