<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="bottom"
	app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

	<com.google.android.material.card.MaterialCardView
			android:id="@+id/cardDialog"
			style="@style/ThemeSheet"
			android:layout_height="wrap_content">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
	<ImageView
		android:id="@+id/dragIndicator"
		android:layout_width="48dp"
		android:layout_height="4dp"
		android:layout_marginTop="@dimen/default_margin"
		android:layout_marginBottom="@dimen/default_margin"
		android:contentDescription="@string/todo"
		android:layout_gravity="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:src="@drawable/drag" />
			<TextView
		android:id="@+id/contributeTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/default_margin"
		android:text="@string/contribute_title"
		android:textColor="?colorPrimary"
		android:textSize="16sp"
		app:layout_constraintTop_toBottomOf="@+id/dragIndicator" />
			<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/default_margin"
		android:fadingEdge="vertical"
		android:fadingEdgeLength="@dimen/default_margin"
		android:requiresFadingEdge="vertical"
		app:layout_constrainedHeight="true"
		app:constraint_referenced_ids="negativeButton"
		app:layout_constraintBottom_toTopOf="@id/negativeButton"
		app:layout_constraintTop_toBottomOf="@id/contributeTitle">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingHorizontal="@dimen/default_margin"
			android:text="@string/contribute_explanation"
			android:textIsSelectable="true" />
	</androidx.core.widget.NestedScrollView>
			<com.google.android.material.button.MaterialButton
		android:id="@+id/negativeButton"
		style="@style/WidgetFoundation.Button.Text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAllCaps="false"
		android:textSize="12sp"
		android:layout_marginEnd="@dimen/padding_normal"
		android:text="@android:string/cancel"
		android:textColor="@color/google_error"
		app:rippleColor="@color/google_error"
				android:layout_gravity="bottom|right"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>
		</LinearLayout>
		</com.google.android.material.card.MaterialCardView>
	</androidx.coordinatorlayout.widget.CoordinatorLayout>