<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp">

        <com.google.android.material.card.MaterialCardView
            style="@style/WidgetFoundation.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/color_card_background_color_selector"
            tools:layout_gravity="center"
            tools:layout_margin="@dimen/l1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <TextView
                    android:id="@+id/kernel_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/l1"
                    android:layout_marginTop="@dimen/l1"
                    android:layout_marginEnd="@dimen/l_50"
                    android:duplicateParentState="true"
                    android:textAppearance="@style/AppearanceFoundation.Body"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/kernel_version_author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/kernel_version_author"
                    android:textAppearance="@style/AppearanceFoundation.Caption.Variant"
                    android:textColor="?android:textColorSecondary"
                    app:layout_constraintStart_toStartOf="@+id/kernel_title"
                    app:layout_constraintTop_toBottomOf="@+id/kernel_title"
                    tools:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/kernel_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/l1"
                    android:layout_marginTop="@dimen/l1"
                    android:layout_marginEnd="@dimen/l1"
                    android:duplicateParentState="true"
                    android:maxLines="5"
                    android:textAppearance="@style/AppearanceFoundation.Caption.Variant"
                    android:textColor="?android:textColorSecondary"
                    app:layout_constraintTop_toBottomOf="@+id/kernel_version_author"
                    tools:lines="4"
                    tools:text="@tools:sample/lorem/random" />

                <View
                    android:id="@+id/kernel_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/l1"
                    android:background="@color/blue_300"
                    app:layout_constraintTop_toBottomOf="@+id/kernel_description" />

                <Button
                    android:id="@+id/kernel_changelog"
                    style="@style/WidgetFoundation.Button.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/changelog"
                    android:textAllCaps="false"
                    app:iconGravity="textEnd"
                    app:layout_constraintBottom_toBottomOf="@+id/kernel_download"
                    app:layout_constraintEnd_toStartOf="@+id/kernel_download"
                    app:layout_constraintTop_toTopOf="@+id/kernel_download" />

                <Button
                    android:id="@+id/kernel_download"
                    style="@style/WidgetFoundation.Button.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/inst_download"
                    android:textAllCaps="false"
                    android:theme="@style/ThemeOverlay.Button.Text.Secondary"
                    app:icon="@drawable/ic_download"
                    app:iconGravity="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/kernel_divider"
                    tools:text="Download" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/bottom_bar_barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="start"
                    tools:constraint_referenced_ids="kernel_changelog,kernel_download" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

</FrameLayout>